data/derived/comb/progs/unify/prog0709.ml.out
Characters 151-152:
  then seen :: [h]
                ^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
